--- a/DiplomskiFinki/DiplomskiFinki/Views/Home/Index.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 
-<h3>Постапка за пријавување, одбрана и оцена на дипломска работа</h3>
+<h3 class="my-4">Постапка за пријавување, одбрана и оцена на дипломска работа</h3>
 <hr class="text-muted" />
 
 <div>
@@ -15,7 +15,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">ментор</dd>
+                    <dd class="col-10">ментор</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -32,7 +32,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">студент</dd>
+                    <dd class="col-10">студент</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -49,7 +49,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">студентска служба</dd>
+                    <dd class="col-10">студентска служба</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -66,7 +66,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">продекан за настава</dd>
+                    <dd class="col-10">продекан за настава</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -84,7 +84,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">ментор</dd>
+                    <dd class="col-10">ментор</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -94,14 +94,14 @@
         </div>
     </div>
     <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+        <div class="text-darkgreen py-3 px-4 fw-bold">
             5. Забелешки од комисија
         </div>
         <div class="bg-white p-3">
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">член, ментор</dd>
+                    <dd class="col-10">член, ментор</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -118,7 +118,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">студентска служба</dd>
+                    <dd class="col-10">студентска служба</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -135,7 +135,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">ментор</dd>
+                    <dd class="col-10">ментор</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
@@ -152,7 +152,7 @@
             <dl class="dl-horizontal">
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">валидира</dt>
-                    <dd class="col-10 fw-bold">продекан за настава</dd>
+                    <dd class="col-10">продекан за настава</dd>
                 </div>
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
