--- a/DiplomskiFinki/DiplomskiFinki/Views/Shared/_Layout.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-            <div class="container-fluid px-5">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3 p-1">
+            <div class="container-fluid px-22">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="http://diplomski.finki.ukim.mk/Images/finki_mk.png" alt="Dplomski Finki" height="50px;"/>
                 </a>
@@ -24,17 +24,17 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
+                            <li class="nav-item me-4">
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-home"></span> Почетна</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item me-4">
                                 <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="fa fa-indent"></span> Дипломска</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item me-4">
                                 <a class="nav-link" target="__blank" href="http://www.finki.ukim.mk/mk/studies/procedura-diplomska-rabota"><span class="fa fa-gavel"></span> Процедура за дипломска работа</a>
                             </li>
                         }
-                        <li class="nav-item">
+                        <li class="nav-item me-4">
                             <a class="nav-link" asp-area="" asp-controller="Diplomas" asp-action="Index"><span class="fa fa-tasks"></span> Листа на дипломски</a>
                         </li>
                     </ul>
@@ -43,14 +43,14 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="px-22">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="footer text-muted">
-        <div class="container">
+    <footer class="footer">
+        <div class="px-22 text-muted">
             <hr class="p-0 m-0" />
             <p class="p-0 m-0">&copy; 2024 - Факултет за информатички науки и компјутерско инженерство</p>
         </div>
