--- a/DiplomskiFinki/DiplomskiFinki/Views/Shared/_LoginPartial.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 <ul class="navbar-nav">
 @if (User.Identity.IsAuthenticated)
 {
-    <li class="nav-item">
+    <li class="nav-item me-4">
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage"><i class="fa fa-user"></i> @User.Claims.ElementAt(22).Value</a>
     </li>
     <li class="nav-item">
