--- a/DiplomskiFinki/DiplomskiFinki/Views/Shared/_Layout.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><span class="fa fa-home"></span> Почетна</a>
                             </li>
                             <li class="nav-item me-4">
-                                <a class="nav-link" asp-area="" asp-controller="" asp-action=""><span class="fa fa-indent"></span> Дипломска</a>
+                                <a class="nav-link" asp-area="" asp-controller="Diplomas" asp-action="Step"><span class="fa fa-indent"></span> Дипломска</a>
                             </li>
                             <li class="nav-item me-4">
                                 <a class="nav-link" target="__blank" href="http://www.finki.ukim.mk/mk/studies/procedura-diplomska-rabota"><span class="fa fa-gavel"></span> Процедура за дипломска работа</a>
