--- a/DiplomskiFinki/DiplomskiFinki/Views/Diplomas/Step2.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Diplomas/Step2.cshtml
@@ -8,7 +8,13 @@
 <h3 class="my-4">Прифаќање на тема од студент</h3>
 <hr class="text-muted" />
 
-<div class="p-3 border rounded-3">
+<div class="bg-lightgreen border-green mb-4">
+    <div class="p-3 text-dark">
+        Пријавниот лист беше пополнет заедно од студентот и менторот. Студентот треба да го потврди пријавниот лист.
+    </div>
+</div>
+
+<div class="p-5 border rounded-3">
     <table class="table table-bordered table-striped table-condensed table-responsive mb-3">
         <tr>
             <td class="col-3">
@@ -60,12 +66,15 @@
             <td class="fw-bold">@Model.Member2.Name @Model.Member2.Surname</td>
         </tr>
     </table>
-<form asp-action="Step2Submit" method="post">
-    <input type="hidden" value=@Model.Id name="id" />
-    <div class="form-group mb-3">
-        Прифаќам <input class="form-check-input" type="radio" value="true" id="true" name="accept">
-        Одбивам <input class="form-check-input" type="radio" value="false" id="false" name="accept">
-    </div>
-    <button class="btn btn-success w-100" type="submit">Submit</button>
-</form>
+    <form asp-action="Step2Submit" method="post" class="mt-5 p-3 border">
+        <h4>Дали ја прифаќаш пријавата?</h4>
+        <input type="hidden" value=@Model.Id name="id" />
+
+        <div class="form-group mb-3">
+            Прифаќам <input class="form-check-input me-4" type="radio" value="true" id="true" name="accept">
+            Одбивам <input class="form-check-input" type="radio" value="false" id="false" name="accept">
+        </div>
+        <button class="btn btn-dark" type="submit">Потврди</button>
+        <a href="/Diplomas" class="btn btn-dark">Откажи</a>
+    </form>
 </div>
