--- a/DiplomskiFinki/DiplomskiFinki/Views/Diplomas/Step5.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Diplomas/Step5.cshtml
@@ -8,17 +8,25 @@
 <h3 class="my-4">Забелешки од комисија</h3>
 <hr class="text-muted" />
 
-<div class="p-3 border rounded-3">
+<div class="bg-lightgreen border-green mb-4">
+    <div class="p-3">
+        Членовите од комисијата во рок од 3 работни дена ја прегледуваат верзијата од дипломската работа и доколку се задоволни го потврдуваат статусот, а во спротивно внесуваат забелешка. Не преземањето на овој чекор од страна на членовите во предвиденио рок, се смета за прифаќање без забелешки. Доколку менторот го валидира статусот, валидацијата ќе биде во име на членовите од комисијата.
+    </div>
+</div>
+
+<div class="p-5 border rounded-3">
     <form asp-action="Step5Submit" method="post">
+        <h4>Дали ја потврдуваш дипломската работа?</h4>
         <input type="hidden" value=@Model.Id name="id" />
         <div class="form-group mb-3">
-            Прифаќам <input class="form-check-input" type="radio" value="true" id="true" name="accept">
+            Прифаќам <input class="form-check-input me-3" type="radio" value="true" id="true" name="accept">
             Одбивам <input class="form-check-input" type="radio" value="false" id="false" name="accept">
         </div>
         <div class="form-group mb-3">
             <label for="Note">Забелешка:</label>
             <textarea class="form-control" id="Note" name="Note"></textarea>
         </div>
-        <button class="btn btn-success w-100" type="submit">Submit</button>
+        <button class="btn btn-dark" type="submit">Потврди</button>
+        <a href="/Diplomas" class="btn btn-dark">Откажи</a>
     </form>
 </div>
