Added some custom colors and make the app responsive

--- a/DiplomskiFinki/DiplomskiFinki/Views/Home/Index.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Home/Index.cshtml
@@ -3,29 +3,41 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 
+<style>
+    .step-background {
+        background: #3B96D1;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .border-custom{
+        border: 1px solid #3B96D1;
+    }
+</style>
 <h3 class="my-4">Постапка за пријавување, одбрана и оцена на дипломска работа</h3>
 <hr class="text-muted" />
 
 <div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4 fw-bold">
-            1. Пријава
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
+            Чекор 1: Пријава
         </div>
         <div class="bg-white p-3">
             <dl class="dl-horizontal">
-                <div class="d-flex">
+                <div class="d-flex justify-content-end align-content-end">
                     <dt class="col-2 text-end pe-3">валидира</dt>
                     <dd class="col-10">ментор</dd>
                 </div>
+
                 <div class="d-flex">
                     <dt class="col-2 text-end pe-3">опис</dt>
                     <dd class="col-10">Менторот, по договор со студентот, ја пополнува формата за нова пријава, достапна на линкот “Нова пријава”. Се пополнуваат полињата за Тема, Област и Кратка содржина. Дополнително, Член 1 содржи листа само на професори, а Член 2 содржи листа на асистенти и професори. Системот праќа известување по електронска пошта до студентот.</dd>
                 </div>
+                
             </dl>
         </div>
+       
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4 fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             2. Прифаќање на темата од студентот
         </div>
         <div class="bg-white p-3">
@@ -41,8 +53,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4 fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             3. Валидирање од службата за студентски прашања
         </div>
         <div class="bg-white p-3">
@@ -58,8 +70,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             3.1. Одобрение од продекан за настава
         </div>
         <div class="bg-white p-3">
@@ -76,8 +88,8 @@
         </div>
     </div>
 
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             4. Одобрение за оценка од ментор
         </div>
         <div class="bg-white p-3">
@@ -93,8 +105,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4 fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             5. Забелешки од комисија
         </div>
         <div class="bg-white p-3">
@@ -110,8 +122,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             6. Валидирање на услови за одбрана
         </div>
         <div class="bg-white p-3">
@@ -127,8 +139,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             7. Одбрана
         </div>
         <div class="bg-white p-3">
@@ -144,8 +156,8 @@
             </dl>
         </div>
     </div>
-    <div class="bg-lightgreen border-green mb-4">
-        <div class="text-darkgreen py-3 px-4  fw-bold">
+    <div class="bg-lightgreen border-custom mb-4">
+        <div class=" step-background text-white py-3 px-4 fw-bold">
             8. Архива
         </div>
         <div class="bg-white p-3">
