--- a/DiplomskiFinki/DiplomskiFinki/Views/Shared/_LoginPartial.cshtml
+++ b/DiplomskiFinki/DiplomskiFinki/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-action="Logout" asp-controller="Account" method="post">
-                <button type="submit" class="nav-link btn btn-link"><i class="fa fa-sign-out"></i> Одјава</button>
+                <button type="submit" class="nav-link btn btn-link text-white"><i class="fa fa-sign-out text-white"></i> Одјава</button>
         </form>
     </li>
 }
@@ -16,7 +16,7 @@ else
 {
     <li class="nav-item">
         <form class="form-inline" asp-action="ExternalLogin" asp-controller="Account" method="post">
-            <button type="submit" class="nav-link btn btn-link"><i class="fa fa-sign-in"></i> Најава</button>
+                <button type="submit" class="nav-link btn btn-link text-white"><i class="fa fa-sign-in text-white"></i> Најава</button>
         </form>
     </li>
 }
